# prng-testing

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  Makefile  README.md  crush.c  install-testu01.sh  install_deps.sh  run_all_tests.py  run_tests.py  run_wrapper.py  summarise_results.py  test-philox.sh.in
plots/: overlapping-seqs.gp  run_ze_tests.sh  zero-escape.gp
src/: aox_uniformity.cpp  aox_uniformity_testu01.cpp  counter_xa_interleave.cpp  counter_xoroshiro128.cpp  gen_il_seeds.py  gray128.cpp  interleave_seeding.hpp  jump.c  jump.h  jump_const3.c  main.cpp  mersenne_twister.cpp  pcg32_fast_ref.cpp  pcg64_fast_ref.cpp  pcg64_ref.cpp  philox.cpp  philox2x64_ref.cpp  philox4x32_ref.cpp  prngs_hwd.c  util.hpp  xoroshiro128.cpp  xoroshiro128_interleave.cpp  xoroshiro128_shift.cpp  zero-escape.cpp  zero_generator.cpp
tests/: CMakeLists.txt  main.cpp  test_philox_impl.sh.in  xoroshiro128_interleave.cpp
